--- a/AWS/pom.xml
+++ b/AWS/pom.xml
@@ -41,7 +41,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.amazonaws.samples.S3Sample</mainClass>
+          <mainClass>com.example.Query</mainClass>
         </configuration>
       </plugin>
     </plugins>
