--- a/Azure/pom.xml
+++ b/Azure/pom.xml
@@ -5,11 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>myexample</artifactId>
+  <artifactId>myQuery</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
-  <name>mywebapp Maven Webapp</name>
+  <name>myQuery Maven Webapp</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,24 +20,21 @@
   </properties>
 
   <dependencies>
-  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
-        <groupId>com.amazonaws</groupId>
-        <artifactId>aws-java-sdk</artifactId>
-        <version>1.11.1000</version>
+        <groupId>com.azure.resourcemanager</groupId>
+        <artifactId>azure-resourcemanager-billing</artifactId>
+        <version>1.0.0-beta.2</version>
     </dependency>
-
   </dependencies>
 
   <build>
-    <finalName>mywebapp</finalName>
+    <finalName>myQuery</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
