--- a/GCP/pom.xml
+++ b/GCP/pom.xml
@@ -100,6 +100,11 @@
       <version>1.1.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk</artifactId>
+      <version>1.11.1000</version>
+    </dependency>
   <!-- [START bigquery_install_with_bom] -->
   </dependencies>
   <!-- [END bigquery_install_with_bom] -->
