--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
       <artifactId>aws-java-sdk</artifactId>
       <version>1.11.1000</version>
     </dependency>
+    <dependency>
+      <groupId>com.azure.resourcemanager</groupId>
+      <artifactId>azure-resourcemanager-billing</artifactId>
+      <version>1.0.0-beta.2</version>
+    </dependency>
   <!-- [START bigquery_install_with_bom] -->
   </dependencies>
   <!-- [END bigquery_install_with_bom] -->
