--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,14 @@
           <target>8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <mainClass>com.fabrikam.App</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
