--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-sdk-bom</artifactId>
+        <version>1.2.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -116,6 +123,11 @@
       <groupId>com.azure.resourcemanager</groupId>
       <artifactId>azure-resourcemanager-billing</artifactId>
       <version>1.0.0-beta.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-identity</artifactId>
+      <version>1.5.2</version>
     </dependency>
   <!-- [START bigquery_install_with_bom] -->
   </dependencies>
