query de azure para el billing

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
       <version>1.5.2</version>
     </dependency>
   <!-- [START bigquery_install_with_bom] -->
+     <dependency>
+      <groupId>com.azure.resourcemanager</groupId>
+      <artifactId>azure-resourcemanager-billing</artifactId>
+      <version>1.0.0-beta.2</version>
+    </dependency> 
   <dependency>
     <groupId>com.azure.resourcemanager</groupId>
     <artifactId>azure-resourcemanager-costmanagement</artifactId>
