--- a/pom.xml
+++ b/pom.xml
@@ -70,71 +70,90 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>google-cloud-bigquery</artifactId>
-    </dependency>
-    <!-- [END bigquery_java_dependencies] -->
-    <!-- [END bigquery_install_with_bom] -->
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-bigquery</artifactId>
+        </dependency>
+        <!-- [END bigquery_java_dependencies] -->
+        <!-- [END bigquery_install_with_bom] -->
 
-    <!-- [START bigquery-enduser-installed-packages] -->
+        <!-- [START bigquery-enduser-installed-packages] -->
     <dependency>
-      <groupId>com.google.oauth-client</groupId>
-      <artifactId>google-oauth-client-java6</artifactId>
-      <version>1.33.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.oauth-client</groupId>
-      <artifactId>google-oauth-client-jetty</artifactId>
-      <version>1.33.3</version>
-    </dependency>
-    <!-- [END bigquery-enduser-installed-packages] -->
+        <groupId>com.google.oauth-client</groupId>
+        <artifactId>google-oauth-client-java6</artifactId>
+        <version>1.33.3</version>
+        </dependency>
+        <dependency>
+        <groupId>com.google.oauth-client</groupId>
+        <artifactId>google-oauth-client-jetty</artifactId>
+        <version>1.33.3</version>
+        </dependency>
+        <!-- [END bigquery-enduser-installed-packages] -->
 
-    <!-- Test dependencies -->
+        <!-- Test dependencies -->
+        <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-bigtable</artifactId>
+        <version>2.7.0</version>
+        <scope>test</scope>
+        </dependency>
+        <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-bigqueryconnection</artifactId>
+        <version>2.3.0</version>
+        <scope>test</scope>
+        </dependency>
+        <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+        </dependency>
+        <dependency>
+        <groupId>com.google.truth</groupId>
+        <artifactId>truth</artifactId>
+        <version>1.1.3</version>
+        <scope>test</scope>
+        </dependency>
+        <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk</artifactId>
+        <version>1.11.1000</version>
+        </dependency>
     <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>google-cloud-bigtable</artifactId>
-      <version>2.7.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>google-cloud-bigqueryconnection</artifactId>
-      <version>2.3.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.truth</groupId>
-      <artifactId>truth</artifactId>
-      <version>1.1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk</artifactId>
-      <version>1.11.1000</version>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core</artifactId>
+      <version>1.31.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
-      <artifactId>azure-identity</artifactId>
-      <version>1.5.2</version>
+      <artifactId>azure-core-management</artifactId>
+      <version>1.7.1</version> <!-- {x-version-update;com.azure:azure-core-management;dependency} -->
     </dependency>
-  <!-- [START bigquery_install_with_bom] -->
-     <dependency>
-      <groupId>com.azure.resourcemanager</groupId>
-      <artifactId>azure-resourcemanager-billing</artifactId>
-      <version>1.0.0-beta.2</version>
-    </dependency> 
-  <dependency>
-    <groupId>com.azure.resourcemanager</groupId>
-    <artifactId>azure-resourcemanager-costmanagement</artifactId>
-    <version>1.0.0-beta.3</version>
-</dependency>
+    <dependency>
+        <groupId>com.azure.resourcemanager</groupId>
+        <artifactId>azure-resourcemanager-costmanagement</artifactId>
+        <version>1.0.0-beta.3</version>
+    </dependency>
+    <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-identity</artifactId>
+        <version>1.5.4</version>
+    </dependency>
+    <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-core-http-netty</artifactId>
+        <version>1.12.4</version>
+    </dependency>
+       <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <version>1.7.5</version>
+   </dependency>
+   <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-log4j12</artifactId>
+       <version>1.7.5</version>
+   </dependency>
   </dependencies>
   <!-- [END bigquery_install_with_bom] -->
 
